logs/dag_id=0_Employee_Sync/run_id=manual__2023-03-16T18:07:36.994787+00:00/task_id=update_external_users_data/attempt=1.log
[2023-03-16T18:07:38.542+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: 0_Employee_Sync.update_external_users_data manual__2023-03-16T18:07:36.994787+00:00 [queued]>
[2023-03-16T18:07:38.550+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: 0_Employee_Sync.update_external_users_data manual__2023-03-16T18:07:36.994787+00:00 [queued]>
[2023-03-16T18:07:38.551+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-03-16T18:07:38.551+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2023-03-16T18:07:38.552+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-03-16T18:07:38.564+0000] {taskinstance.py:1383} INFO - Executing <Task(_PythonDecoratedOperator): update_external_users_data> on 2023-03-16 18:07:36.994787+00:00
[2023-03-16T18:07:38.570+0000] {standard_task_runner.py:55} INFO - Started process 43377 to run task
[2023-03-16T18:07:38.576+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', '0_Employee_Sync', 'update_external_users_data', 'manual__2023-03-16T18:07:36.994787+00:00', '--job-id', '48', '--raw', '--subdir', 'DAGS_FOLDER/test_dag.py', '--cfg-path', '/tmp/tmp8f99jx5r']
[2023-03-16T18:07:38.579+0000] {standard_task_runner.py:83} INFO - Job 48: Subtask update_external_users_data
[2023-03-16T18:07:38.642+0000] {task_command.py:376} INFO - Running <TaskInstance: 0_Employee_Sync.update_external_users_data manual__2023-03-16T18:07:36.994787+00:00 [running]> on host 9fe6516b8a01
[2023-03-16T18:07:38.698+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=0_Employee_Sync
AIRFLOW_CTX_TASK_ID=update_external_users_data
AIRFLOW_CTX_EXECUTION_DATE=2023-03-16T18:07:36.994787+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-03-16T18:07:36.994787+00:00
[2023-03-16T18:07:38.725+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/decorators/base.py", line 188, in execute
    return_value = super().execute(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 193, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/test_dag.py", line 93, in update_external_users_data
    save_user_data(users_data, db_connection)
  File "/opt/airflow/dags/test_dag.py", line 50, in save_user_data
    """+ values)
psycopg2.errors.SyntaxError: syntax error at or near "F7B33d2bcf9f5"
LINE 3:     (88F7B33d2bcf9f5,Shelby,Terrell,elijah57@example.net,001...
               ^

[2023-03-16T18:07:38.741+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=0_Employee_Sync, task_id=update_external_users_data, execution_date=20230316T180736, start_date=20230316T180738, end_date=20230316T180738
[2023-03-16T18:07:38.750+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 48 for task update_external_users_data (syntax error at or near "F7B33d2bcf9f5"
LINE 3:     (88F7B33d2bcf9f5,Shelby,Terrell,elijah57@example.net,001...
               ^
; 43377)
[2023-03-16T18:07:38.790+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-03-16T18:07:38.812+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
